--- a/backend/package.json
+++ b/backend/package.json
@@ -9,21 +9,14 @@
     "dev": "node --watch server.js",
     "init-db": "node database/init.js"
   },
-  "keywords": [
-    "ems",
-    "inventory",
-    "medical",
-    "supplies"
-  ],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "better-sqlite3": "^9.2.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "google-auth-library": "^9.15.1",
+    "cors": "^2.8.5",
+    "mongoose": "^8.0.3",
+    "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
