--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node --watch server.js",
-    "init-db": "node database/init.js"
+    "init-db": "node database/init.js",
+    "seed": "node database/seed.js"
   },
   "dependencies": {
     "express": "^4.18.2",
