--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "vercel-build": "vite build"
   },
   "browserslist": {
     "production": [
